fixwed layout issue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap')
+
 
 * {
     box-sizing: border-box;
@@ -10,7 +10,8 @@ body {
     font-size: 14px;
     margin: 0;
     background-color: #f4f4f4;
-    font-family: 'Poppins', sans-serif;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
 }
 
 
@@ -62,7 +63,7 @@ body {
 .header__navbar {
     width: 100%;
     padding: 0;
-    transition: 0.3s;
+    transition: all 0.3s;
     margin: 0;
     overflow: hidden;
 }
@@ -97,39 +98,48 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+	 padding: 0 1rem;
 }
 
 .content__inner {
     max-width: 1024px;
-    padding: 0 1rem;
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     width: 100%;
 }
 
-.content__inner h2 {
-    margin-bottom: 0.5rem;
+.content__info {
+	width: 100%;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 0.2rem;
+	margin-bottom: 1rem;
 }
 
-.content__inner p {
+.content__info h2 {
+    margin-bottom: 0.5rem;
+	display: inline;
+	font-weight: 500;
+}
+
+.content__info p {
     margin-top: 0.5rem;
+	display: inline;
+	font-size: 1rem;
+	margin-left: 0.8rem;
 }
 
 .posts {
     padding-bottom: 3rem;
     width: 100%;
-    margin-top: 3rem;
     display: grid;
     gap: 1rem;
-    place-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
 .posts__card {
     width: 100%;
-    max-width: 300px;
-    min-width: 200px;
+    max-width: 380px;
+    min-width: 280px;
     background-color: #fff;
-    /* box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.15); */
 }
 
 .posts__image {
@@ -151,6 +161,9 @@ body {
 .posts__body h5 {
     margin-bottom: 0.5rem;
     margin-top: 0.2rem;
+	font-size: 1.2rem;
+	font-weight: 500;
+	color: blue;
 }
 
 .posts__body p {
@@ -158,6 +171,16 @@ body {
     margin-bottom: 0.2rem;
 }
 
+.footer {
+	padding: 1rem 0.8rem;
+	border-top: 1px solid #ccc;
+}
+
+.footer p {
+	font-size: 0.9rem;
+}
+
+/*  responsive design */
 @media (min-width: 768px) {
     .header__menu-btn {
         display: none;
@@ -185,4 +208,10 @@ body {
         margin: 0 0.5rem;
         padding: 0.3rem 0.8rem;
     }
+}
+
+@media (max-width: 622px) {
+	.posts {
+		place-items: center;
+	}
 }
